--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -11,9 +11,8 @@ services:
     container_name: oasisform
     restart: always
     env_file:
-      - './env/.env.prod.rails'    
+      - './env/.env.dev.rails'    
     volumes:
       - ./oasisform:/home/oasisform
     ports:
       - "3001:3000"
-  
