--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@ oasisform/config/master.key
 
 # dotenv
 # TODO Comment out this rule if environment variables can be committed
-# .env
+env/*
 
 ## Environment normalization:
 oasisform/.bundle
